# llmh

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
api/: alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_init.py  0002_phase_g_polish.py  0003_nullable_source_hostname.py  0004_unique_source_name.py
api/llmh/: config.py  main.py  metrics.py  rule_notifications.py
api/llmh/alerts/: email.py  evaluator.py  webhook.py
api/llmh/auth/: client_ip.py  deps.py  ingest_token.py  rate_limit.py  reset_tokens.py  sessions.py
api/llmh/db/: base.py  models.py  session.py
api/llmh/routers/: alerts.py  auth.py  health.py  ingest.py  logs.py  metrics.py  rules.py  sources.py
api/llmh/schemas/: alert.py  auth.py  common.py  log.py  rule.py  source.py
api/llmh/search/: index.py
api/llmh/services/: logs.py  rules.py  sources.py  users.py
api/llmh/utils/: claude_import.py
api/scripts/: create_admin.py  create_reset_token.py  create_user.py  delete_user.py  ensure_schema.py  import_claude_jsonl.py  list_users.py  reindex_meili.py  repair_claude_logs.py  set_password.py
api/tests/: conftest.py  test_alerts.py  test_auth.py  test_claude_import.py  test_ingest.py  test_phase_g.py  test_rules.py  test_search.py  test_sources.py
client/: README.md  pyproject.toml
client/llmh_client/: __init__.py  __main__.py  claude_archive.py  codex_archive.py
client/tests/: test_client.py  test_codex_client.py
docker/: api.Dockerfile  client.Dockerfile  meilisearch.env  web.Dockerfile  worker.Dockerfile
docs/: README.md  alerts.md  api.md  architecture.md  data-model.md  deployment.md  frontend.md  ingestion.md  phases.md  search.md
web/: .env.local.example  (+5 more)
worker/: pyproject.toml
worker/llmh_worker/: __main__.py  redis_consumer.py
worker/tests/: conftest.py  test_redis_consumer.py
(+45 files in other folders)
