[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmh-api"
version = "0.1.0"
description = "llmh API"
requires-python = ">=3.12"
dependencies = [
  "aiosmtplib>=3.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "email-validator>=2.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "meilisearch-python-sdk>=4",
  "passlib[argon2]>=1.7",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "redis>=5",
  "sqlalchemy[asyncio]>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["llmh", "llmh.db", "llmh.schemas", "llmh.routers", "llmh.services", "llmh.auth", "llmh.utils", "llmh.search", "scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
